# tap-gn-s3

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_gn_s3/: __init__.py  __main__.py  client.py  csv_handler.py  s3_client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
