[project]
name = "None-tap-gn-s3"
version = "0.0.1"
description = "Singer tap for gn-s3, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Jesse Ocon", email = "jesse.ocon@growthnirvana.com" }]
keywords = [
    "ELT",
    "gn-s3",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    "singer-sdk~=0.44.3",
    "requests~=2.32.3",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs~=1.1.1",
]

[project.scripts]
# CLI declaration
tap-gn-s3 = 'tap_gn_s3.tap:Tapgn-s3.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]
[tool.hatch.build.targets.wheel]
packages = [
    "tap_gn_s3",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
[tool.poetry]
name = "tap-gn-s3"
version = "0.1.0"
description = "Singer tap for reading CSV files from S3"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tap_gn_s3"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
singer-sdk = "^0.34.0"
boto3 = "^1.34.0"
backoff = "^1.8.0"
more-itertools = "^10.2.0"
singer-encodings = "^0.3.0"
voluptuous = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.20230706"
types-simplejson = "^3.19.0.20230706"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100


