[project]
name = "tap-gn-s3"
version = "0.0.1"
description = "Singer tap for gn-s3, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Jesse Ocon", email = "jesse.ocon@growthnirvana.com" }]
keywords = [
    "ELT",
    "gn-s3",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9,<4.0"
dependencies = [
    "singer-sdk~=0.44.3",
    "requests~=2.32.3",
    "boto3>=1.34.0",
    "pendulum>=2.1.0",
    "more-itertools>=10.2.0",
    "backoff>=1.8.0",
    "smart-open (>=7.1.0,<8.0.0)",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[project.scripts]
# CLI declaration
tap-gn-s3 = 'tap_gn_s3.tap:TapGnS3.cli'

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = [
    "tap_gn_s3",
]


